# XBClient

./: .gitignore  AGENTS.md  NOTICE  README.md  artifacts-xbclient-after-adclose.xml  artifacts-xbclient-current.xml  artifacts-xbclient-node-select.xml  artifacts-xbclient-vivo-disclosure.xml  artifacts-xbclient-vivo-hy2-test.xml  artifacts-xbclient-vivo-hy2-v4-test.xml  artifacts-xbclient-vivo-lang.xml  artifacts-xbclient-vivo-login.xml  artifacts-xbclient-vivo-login2.xml  artifacts-xbclient-vivo-main.xml  artifacts-xbclient-vivo-node-select.xml  artifacts-xbclient-vivo-node-test-done.xml  artifacts-xbclient-vivo-start.xml  artifacts-xbclient-vivo-vpnprompt.xml  artifacts-xbclient-vivo-vpnstarted.xml  build.gradle.kts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
.github/workflows/: ci.yml  debug.yml  desktop.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/route/geoip/: cn.txt
app/src/main/res/drawable/: ic_gift.xml  ic_launcher.xml  ic_notice.xml  ic_notification.xml
app/src/main/res/raw/: open_source_licenses.txt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/values-ru/: strings.xml
apps/android/: build.gradle.kts
apps/android/src/main/res/drawable/: ic_language.xml  ic_nav_home.xml  ic_nav_nodes.xml  ic_nav_plans.xml  ic_nav_settings.xml  (+1 more)
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  system_proxy.rs  tray.rs
apps/electron/: .gitignore  bootstrap.mjs  main.mjs  package.json  preload.cjs  preload.mjs  updater.mjs
apps/electron/backend/: Cargo.toml
apps/electron/backend/src/: main.rs
apps/electron/resources/: local.properties.example
apps/electron/web/: index.html  package.json  vite.config.ts
apps/electron/web/src/: format.ts  i18n.ts  reward.ts  styles.css
apps/electron/web/src/api/: helpers.ts  system.ts  xboard.ts
apps/electron/web/src/platform/: electron-tray-sync.ts  electron.ts
apps/electron/web/src/store/: persist.ts
apps/electron/web/src/vue/: App.vue  router.ts  state.ts
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json  system.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  subscription.rs  tray.rs
gradle/: aerion-native.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
plugins/tauri-plugin-xbclient-mobile/: Cargo.toml  build.rs
plugins/tauri-plugin-xbclient-mobile/android/: build.gradle.kts
plugins/tauri-plugin-xbclient-mobile/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-xbclient-mobile/android/src/main/java/: XbClientMobilePlugin.kt
plugins/tauri-plugin-xbclient-mobile/android/src/main/java/moe/telecom/xbclient/: AerionCore.kt  XbClientVpnService.kt
plugins/tauri-plugin-xbclient-mobile/android/src/main/res/drawable/: ic_notification.xml
plugins/tauri-plugin-xbclient-mobile/android/src/main/res/values/: strings.xml
plugins/tauri-plugin-xbclient-mobile/ios/: Package.swift
plugins/tauri-plugin-xbclient-mobile/ios/Sources/: XbClientMobilePlugin.swift
plugins/tauri-plugin-xbclient-mobile/src/: lib.rs
rust/aerion-core/: Cargo.toml
rust/aerion-core/src/: aerion_config_compat.rs  aerion_core.rs  aerion_mihomo_sanitize.rs  aerion_protocol.rs  aerion_route.rs  android.rs  lib.rs
rust/electron-backend/: Cargo.toml
rust/electron-backend/src/: main.rs  subscription.rs  system_proxy.rs
rust/socks5-impl/: Cargo.toml  LICENSE
rust/xbclient-core/: Cargo.toml
rust/xbclient-core/src/: aerion_core.rs  android.rs  lib.rs  naive.rs
rust/xbclient-core/src/anytls/: config.rs  probe.rs  protocol.rs  socks.rs  socks_udp.rs  vpn.rs
rust/xbclient-core/src/hysteria2/: config.rs  mod.rs  probe.rs  protocol.rs  socks.rs  socks_udp.rs  vpn.rs
scripts/: build-debug.ps1  install-android-rust-targets.ps1  tauri-sync-version.mjs  update-route-assets.py
scripts/ci/: setup-linux-arm64-fpm.sh  validate-desktop-secrets.sh
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: format.ts  i18n.ts  main.ts  main.tsx  nodes.ts  reward.ts  styles.css  subscription-sync.ts
web/src/api/: guestConfig.ts  helpers.ts  system.ts  xboard.ts
web/src/components/: MainLayout.tsx
web/src/desktop/: connection.ts
web/src/pages/: AppRules.tsx  Home.tsx  Licenses.tsx  Login.tsx  Plans.tsx  Profile.tsx  Services.tsx  Settings.tsx  Tickets.tsx
web/src/pages/services/: AccountSecurity.tsx  LogsKnowledge.tsx  OAuthGift.tsx  TicketsPanel.tsx  helpers.ts
web/src/platform/: electron-api.d.ts  electron-tray-sync.ts  electron.ts  shell.ts
web/src/store/: index.ts  persist.ts
web/src/vue/: App.vue  router.ts  state.ts
web/src/vue/components/: DesktopConnectionPanel.vue  DesktopTitleBar.vue  SubscriptionBlockedPanel.vue
web/src/vue/plugins/: vuetify.ts
web/src/vue/views/: AppRulesView.vue  HomeView.vue  LicensesView.vue  LoginView.vue  NodeSelectView.vue  PlansView.vue  ProfileView.vue  PromotionView.vue  ServicesView.vue  SettingsView.vue  TicketsView.vue  TrafficLogsView.vue  TrafficRulesView.vue
(+37 files in other folders)
