[package]
name = "aerion-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "aerion_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
aerion = { git = "https://github.com/MoeclubM/Aerion.git", rev = "ccf034e0fbdf608d72fcb8ddb0d115b35ce4cd72", default-features = false }
anyhow = "1.0.102"
jni = "0.22.4"
log = "0.4.29"
once_cell = "1.21.4"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "1.0.7"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[patch.crates-io]
socks5-impl = { path = "../third_party/socks5-impl" }
tun2proxy = { path = "../third_party/tun2proxy" }
