[package]
name = "xbclient-electron-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
aerion-core = { path = "../aerion-core" }
anyhow = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinInet"] }

[patch.crates-io]
socks5-impl = { path = "../third_party/socks5-impl" }
tun2proxy = { path = "../third_party/tun2proxy" }
