[package]
name = "xbclient-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "xbclient_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
getrandom = "0.3.4"
hex = "0.4.3"
jni = "0.22.4"
log = "0.4.29"
md-5 = "0.11.0"
once_cell = "1.21.4"
percent-encoding = "2.3.2"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
url = "2.5.8"
webpki-roots = "1.0.7"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tun2proxy = { version = "0.7.21", default-features = false }
