[package]
name = "secovpn"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "secovpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aerion-core = { path = "../../../rust/aerion-core" }
anyhow = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Networking_WinInet"] }

[patch.crates-io]
socks5-impl = { path = "../../../rust/third_party/socks5-impl" }
